# RLHFSummarise

./: .gitignore  BES_ITALIAN_ACCENT_README.md  INSTALL.md  INTEGRATED_PIPELINE_README.md  MODULAR_ARCHITECTURE.md  README.md  VOICE_CLONER_README.md  WEB_README.md  YOUTUBE_INTEGRATION_README.md  app.py  check_weights.py  convert_db_to_json.py  demo_bes_italian.py  export_tweets_to_json.py  fix_torch_compatibility.py  input.txt  install-macos.sh  integrated_db_pipeline.py  integrated_tweet_voice_pipeline.py  main.py  modular_app.py  pipeline.py  pipeline_factory.py  pyproject.toml  qwen_reward_model.pt  requirements-minimal.txt  requirements.txt  results_BarackObama_barackobama_20250716_195917.json  results_BarackObama_barackobama_20250716_201326.json  results_BarackObama_barackobama_20250716_202216.json  results_BarackObama_barackobama_20250716_203531.json  results_BarackObama_barackobama_20250716_210349.json  results_BarackObama_barackobama_20250717_101418.json  results_BarackObama_barackobama_20250717_102027.json  results_BarackObama_freeman_20250716_193616.json  results_BarackObama_freeman_20250716_194412.json  results_BarackObama_freeman_20250716_194631.json  results_BarackObama_freeman_20250716_195528.json  results_NASA_deniro_20250716_193825.json  results_NASA_deniro_20250716_194707.json  (+54 more)
backend/: README.md  data_loader.py  data_preprocess.py  data_preprocess_comparison.py  inference.py  model.py  ppo_model.py  requirements.txt  reward.py  text_utils.py  train.py  tweet_summarizer_pipeline.py  tweet_summarizer_pipeline_ppo.py
core/: __init__.py  data_models.py  interfaces.py  pipeline_manager.py
data/posts/twitter/: AOC_posts.json  BarackObama_posts.json  BernieSanders_posts.json  NASA_posts.json  (+7 more)
implementations/: __init__.py  crawlers.py  processors.py  storage.py  summarizer.py  voice_synthesizer.py  youtube_processor.py
json_tweets/: BarackObama_tweets.json  dril_tweets.json  elonmusk_tweets.json  horse_ebooks_tweets.json  realDonaldTrump_tweets.json  sama_tweets.json
pipeline_instagram/: instagram_scraper.py  run_instagram_pipeline.py
pipeline_twitter/: convert_db_to_json.py  integrated_db_pipeline.py  integrated_tweet_voice_pipeline.py  run_db_pipeline.py  run_integrated_pipeline.py  run_json_converter.py  twitter_scraper_database.py
processed_content/: content_20250717_215458.json
rlhf_summarizer/: README.md  run_tweet_summarizer.py  run_tweet_summarizer_ppo.py
summaries/: summary_20250718_143817.txt  summary_20250718_144734.txt
templates/: index.html  index_with_youtube.html
transcriptions/: transcription_20250717_215457.json  transcription_20250718_142628.json  transcription_20250718_143817.json  transcription_20250718_144734.json
voices/barackobama/: mp32wav.py
voices/elonmusk/: mp32wav.py
(+7 files in other folders)
