[project]
name = "rlhfsummarise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.9.0",
    "faster-whisper>=1.1.1",
    "moviepy>=2.2.1",
    "openai>=1.97.0",
    "pathlib>=1.0.1",
    "pathutils>=1.0",
    "torch>=2.7.1",
    "transformers>=4.53.2",
    "yt-dlp>=2025.6.30",
]
