[project]
name = "rlhfsummarise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=0.20.0",
    "beautifulsoup4>=4.12.0",
    "certifi>=2023.7.22",
    "datasets>=2.14.0",
    "einops>=0.7.0",
    "emoji>=2.8.0",
    "flask>=2.3.0",
    "flask-socketio>=5.3.0",
    "numpy==2.1.3",
    "pandas==1.5.3",
    "peft>=0.6.0",
    "python-dateutil>=2.8.0",
    "requests>=2.31.0",
    "scipy>=1.10.0",
    "selenium>=4.0.0",
    "snscrape>=0.7.0",
    "soundfile>=0.12.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.65.0",
    "transformers>=4.35.0",
    "tweepy>=4.14.0",
    "typing-extensions>=4.7.0",
    "urllib3>=2.0.0",
    "webdriver-manager>=3.8.0",
    "yt-dlp>=2023.12.30",
    "faster-whisper>=0.10.0",
    "moviepy>=1.0.3",
    "tts==0.22.0",
]
